Optimize creation of new users with groups